maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:15: error: value Nord is not a member of object plm.universe.Direction
    while (getDirection() == Direction.Nord && estFaceMur == false) {
                                       ^IslandMaze:38: error: missing parameter type
      case_ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
      ^